# dutch-kbqa

./: .gitignore  .sample-env  README.md  constants.py  convert.py  download.sh  encode.py  integrate.py  main.py  modified-translations.csv  requirements.txt  setup.py  split.py  translate.py  translations.csv
cpp-pre-processing/: CMakeLists.txt
cpp-pre-processing/data/: data_nl.json.bak  data_test_nl.json.bak
cpp-pre-processing/inc/: entity-linking.h  entity-masking.h  fix-details.h  labels.h  raw.h
cpp-pre-processing/inc/suffix-tree/: explicit-state.h  longest-common-substring.h  suffix-tree.h  unicode-string.h
cpp-pre-processing/src/: entity-linking.cpp  entity-masking.cpp  fix-details.cpp  labels.cpp  main.cpp  raw.cpp
cpp-pre-processing/src/suffix-tree/: explicit-state.cpp  longest-common-substring.cpp  suffix-tree.cpp  unicode-string.cpp
documentation/: create-dutch-dataset.md  dataset.md  google-cloud.md  install-model-dependencies.md  run-model.md
environments/appendix/: .bertje-mbert  .bertje-spbert  .bertje-xlm-roberta  .mbert-spbert  .xlm-roberta-spbert  .xlm-roberta-xlm-roberta
environments/original/: .exp-1-original  .exp-2-batch-8  .exp-3-batch-16  .exp-4-learn-rate-5-e-min-6  .exp-5-learn-rate-2-e-min-5  .exp-6-learn-rate-3-e-min-5  .exp-7-model-bert  .exp-final
final-datasets/: pre_process.py
model/: fine-tune.sh
pre_processing/: answer.py  question.py  question_answer_pair.py  translation.py
pre_processing/dataset/: dataset.py  lc_quad.py
python-pre-processing/: main.py
python-pre-processing/pre_processing/: answer.py
python-pre-processing/utility/: language.py
shell-scripts/: download.sh  finalise-dataset.sh  generate-question-entities-properties-map.sh  label-entities-and-properties.sh  mask-question-answer-pairs.sh  replace-errors.sh  replace-special-symbols.sh  translate.sh  validate.sh
shell-scripts/create-dataset/: download.sh  generate-question-entities-properties-map.sh  label-entities-and-properties.sh  mask-question-answer-pairs.sh  replace-special-symbols.sh  (+1 more)
source/cpp-ds-create/: CMakeLists.txt
source/cpp-ds-create/include/: command-line.hpp  entity-property-labels.hpp  question-entities-properties.hpp  replace-special-symbols.hpp  utilities.hpp
source/cpp-ds-create/include/suffix-trees/: explicit-state.hpp  longest-common-substring.hpp  suffix-tree.hpp  unicode-string.hpp
source/cpp-ds-create/include/tasks/: collect-entities-properties.hpp  label-entities-properties.hpp  mask-question-answer-pairs.hpp  replace-special-symbols.hpp
source/cpp-ds-create/source/: command-line.cpp  entity-property-labels.cpp  main.cpp  question-entities-properties.cpp  replace-special-symbols.cpp  utilities.cpp
source/cpp-ds-create/source/suffix-trees/: explicit-state.cpp  longest-common-substring.cpp  suffix-tree.cpp  unicode-string.cpp
source/cpp-ds-create/source/tasks/: collect-entities-properties.cpp  label-entities-properties.cpp  mask-question-answer-pairs.cpp  replace-special-symbols.cpp
splits/: mcd-1.json  mcd-2.json  random-split.json
translations/: dutch-brackets.json
utility/: match.py  typing.py  wikidata.py
(+35 files in other folders)
